--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -179,3 +179,17 @@ section.success {
 .second .view.ng-leave.ng-leave-active{
   left: -100%;
 }
+
+/* languages */
+.navbar-default .navbar-nav > li > a.switch_lang{
+    display: inline-block;
+}
+.navbar-default .navbar-nav > li span{
+    color: #FFF;
+}
+.navbar-default .navbar-nav > li > a.switch_fr{
+    padding-right: 5px;
+}
+.navbar-default .navbar-nav > li > a.switch_en{
+    padding-left: 5px;
+}
